# RPi-CAMK_TORUN

./: .cproject  .project  CMakeLists.txt  Configuration.h  Includes.h  Makefile  OutputData.h  Picture.h  README.txt  a.out  add_to_git  app  dane.config  default.config  detection.cpp  files_operations.cpp  files_operations.h  functions.cpp  functions.h  gmon.out  image_matfunctions.cpp  image_matfunctions.h  image_processing.cpp  image_processing.h  main.cpp  parameters.txt  skrypt  slit_guide  start  tablica  teciki.txt  uart.c  uart.h  wykres
Frames/: .arg.txt.kate-swp  arg.txt
html/: ErrorVectorNorm.txt  error_list.txt  michas.html  output.html
include/: AstronomicFrame.hpp  CenterSearchingMethods.hpp  Frame.hpp  SearchingMethods.hpp  helpers.hpp
src/: AstronomicFrame.cpp  CenterSearchingMethods.cpp  Frame.cpp  SearchingMethods.cpp  helpers.cpp  uart.c
test/: AstronomicFram_test.cpp  AstronomicFram_test.hpp  AstronomicFrameTest.cpp  AstronomicFrameTest.hpp  FrameTest.cpp  FrameTest.hpp
